--- a/index.html
+++ b/index.html
@@ -3,177 +3,180 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For My Love ❤️</title>
+<title>My Forever ❤️</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-:root {
-  --pink1:#ff5f9e;
-  --pink2:#ff85c1;
+:root{
+  --pink:#ff6fae;
+  --pink2:#ff9acb;
   --gold:#ffd700;
-  --white:#fff;
 }
 
-* {
-  box-sizing: border-box;
+*{box-sizing:border-box;}
+
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  color:white;
+  overflow:hidden;
+  background:linear-gradient(-45deg,#ff5f9e,#ff85c1,#ff9acb,#ff6fae);
+  background-size:400% 400%;
+  animation:bgMove 14s ease infinite;
 }
 
-body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  color: white;
-  overflow: hidden;
-  background: linear-gradient(-45deg, #ff5f9e, #ff85c1, #ff9acb, #ff6fae);
-  background-size: 400% 400%;
-  animation: bgMove 12s ease infinite;
+@keyframes bgMove{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
 
-@keyframes bgMove {
-  0% {background-position:0% 50%}
-  50% {background-position:100% 50%}
-  100% {background-position:0% 50%}
+.page{
+  display:none;
+  height:100vh;
+  padding:24px;
+  text-align:center;
 }
 
-.page {
-  display: none;
-  height: 100vh;
-  padding: 24px;
-  text-align: center;
+.active{
+  display:block;
+  animation:fadeIn 1s ease;
 }
 
-.active {
-  display: block;
-  animation: fadeIn 1s ease;
-}
-
-@keyframes fadeIn {
-  from {opacity:0; transform:scale(0.95);}
-  to {opacity:1; transform:scale(1);}
+@keyframes fadeIn{
+  from{opacity:0;transform:scale(.95)}
+  to{opacity:1;transform:scale(1)}
 }
 
 /* FLOATING HEARTS */
-.heart-float {
-  position: absolute;
-  bottom: -20px;
-  font-size: 24px;
-  animation: floatUp 8s linear infinite;
-  opacity: 0.6;
+.heart-float{
+  position:absolute;
+  bottom:-20px;
+  font-size:20px;
+  opacity:.7;
+  animation:floatUp 8s linear infinite;
 }
 
-@keyframes floatUp {
-  from {transform: translateY(0); opacity:1;}
-  to {transform: translateY(-120vh); opacity:0;}
+@keyframes floatUp{
+  from{transform:translateY(0);opacity:1}
+  to{transform:translateY(-120vh);opacity:0}
 }
 
-/* MAIN HEART */
-.big-heart {
-  font-size: 130px;
-  margin-top: 110px;
-  animation: pulse 1.3s infinite;
-  filter: drop-shadow(0 0 25px rgba(255,255,255,0.7));
+/* TITLES */
+.title{
+  font-family:'Great Vibes',cursive;
+  font-size:44px;
+  margin-top:20px;
 }
 
-@keyframes pulse {
-  0% {transform:scale(1);}
-  50% {transform:scale(1.25);}
-  100% {transform:scale(1);}
+.subtitle{
+  font-size:16px;
+  opacity:.9;
 }
 
-.progress-box {
-  width: 85%;
-  height: 16px;
-  background: rgba(255,255,255,0.35);
-  border-radius: 20px;
-  margin: 40px auto;
-  overflow: hidden;
+/* HEART */
+.big-heart{
+  font-size:140px;
+  margin-top:120px;
+  animation:pulse 1.2s infinite;
+  filter:drop-shadow(0 0 30px rgba(255,255,255,.7));
 }
 
-.progress-fill {
-  height: 100%;
-  width: 0%;
-  background: linear-gradient(90deg, white, gold);
+@keyframes pulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.3)}
+  100%{transform:scale(1)}
 }
 
-/* TEXT */
-.title {
-  font-family: 'Great Vibes', cursive;
-  font-size: 42px;
-  margin-top: 20px;
+.progress-box{
+  width:85%;
+  height:16px;
+  background:rgba(255,255,255,.3);
+  border-radius:20px;
+  margin:40px auto;
+  overflow:hidden;
 }
 
-.subtitle {
-  font-size: 16px;
-  opacity: 0.9;
+.progress-fill{
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#fff,var(--gold));
 }
 
-/* PHOTOS */
-.photo {
-  width: 92%;
-  max-width: 360px;
-  border-radius: 22px;
-  margin-top: 40px;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-  animation: photoFade 0.8s ease;
+/* DRAG PHOTOS */
+#photoStack{
+  position:relative;
+  height:70vh;
 }
 
-@keyframes photoFade {
-  from {opacity:0; transform:scale(0.9);}
-  to {opacity:1; transform:scale(1);}
+.drag-photo{
+  position:absolute;
+  width:85%;
+  max-width:320px;
+  left:50%;
+  transform:translateX(-50%);
+  border-radius:22px;
+  box-shadow:0 20px 40px rgba(0,0,0,.35);
+  cursor:grab;
 }
+
+.drag-photo:nth-child(1){top:40px}
+.drag-photo:nth-child(2){top:100px}
+.drag-photo:nth-child(3){top:160px}
+.drag-photo:nth-child(4){top:220px}
 
 /* BUTTON */
-button {
-  margin-top: 30px;
-  padding: 15px 38px;
-  border-radius: 40px;
-  border: none;
-  background: linear-gradient(135deg, gold, #fff1a8);
-  font-size: 18px;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+button{
+  margin-top:30px;
+  padding:16px 40px;
+  border:none;
+  border-radius:40px;
+  font-size:18px;
+  font-weight:bold;
+  background:linear-gradient(135deg,var(--gold),#fff1a8);
+  cursor:pointer;
+  box-shadow:0 10px 30px rgba(0,0,0,.3);
 }
 
-/* TICKET */
-.ticket {
-  width: 300px;
-  height: 170px;
-  margin: 90px auto;
-  background: linear-gradient(135deg, gold, #fff2a8);
-  color: #4b3500;
-  border-radius: 22px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 26px;
-  font-weight: bold;
-  animation: shine 2s infinite;
+/* GOLDEN TICKET */
+.ticket{
+  width:300px;
+  height:170px;
+  margin:90px auto;
+  background:linear-gradient(135deg,var(--gold),#fff2a8);
+  color:#4b3500;
+  border-radius:22px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:26px;
+  font-weight:bold;
+  animation:shine 2s infinite;
 }
 
-@keyframes shine {
-  0% {box-shadow:0 0 10px gold;}
-  50% {box-shadow:0 0 40px gold;}
-  100% {box-shadow:0 0 10px gold;}
+@keyframes shine{
+  0%{box-shadow:0 0 10px gold}
+  50%{box-shadow:0 0 40px gold}
+  100%{box-shadow:0 0 10px gold}
 }
 
 /* LOVE LETTER */
-.letter {
-  max-width: 360px;
-  margin: 40px auto;
-  background: rgba(255,255,255,0.15);
-  padding: 22px;
-  border-radius: 20px;
-  backdrop-filter: blur(10px);
-  font-size: 16px;
-  line-height: 1.7;
+.letter{
+  max-width:360px;
+  margin:40px auto;
+  padding:22px;
+  border-radius:20px;
+  background:rgba(255,255,255,.15);
+  backdrop-filter:blur(10px);
+  line-height:1.7;
 }
 </style>
 </head>
 
 <body>
 
-<audio id="music" autoplay loop>
+<audio id="music" loop autoplay>
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
@@ -189,10 +192,17 @@ button {
 
 <!-- PAGE 2 -->
 <div class="page" id="page2">
-  <div class="title">We Made It Together</div>
-  <img id="memoryPhoto" class="photo" src="photo1.jpg">
-  <p class="subtitle">Tap the memories 💕</p>
-  <button id="giftBtn" style="display:none;">Your Gift 🎁</button>
+  <div class="title">Every Memory Matters</div>
+  <p class="subtitle">Move them anywhere 💕</p>
+
+  <div id="photoStack">
+    <img class="drag-photo" src="photo1.jpg">
+    <img class="drag-photo" src="photo2.jpg">
+    <img class="drag-photo" src="photo3.jpg">
+    <img class="drag-photo" src="photo4.jpg">
+  </div>
+
+  <button id="giftBtn" style="display:none;">🎁 I Found Something</button>
 </div>
 
 <!-- PAGE 3 -->
@@ -203,70 +213,85 @@ button {
 
 <!-- PAGE 4 -->
 <div class="page" id="page4">
-  <div class="title">A Letter For You</div>
+  <div class="title">For You</div>
   <div class="letter">
-    Every hard day, every tired night, every smile and tear —  
-    I’d choose you again and again.  
-    Thank you for being my love, my peace, my home ❤️  
+    Through stress, silence, chaos, smiles and tears —  
+    I would still choose you.  
+    Thank you for staying, loving, believing.  
+    You are my forever ❤️
   </div>
-  <button onclick="showPage(5)">Forever Us</button>
+  <button onclick="showPage(5)">Forever</button>
 </div>
 
 <!-- PAGE 5 -->
 <div class="page" id="page5">
-  <div class="title">Forever ♾️</div>
-  <img id="finalPhoto" class="photo" src="final1.jpg">
-  <p class="subtitle">Tap endlessly 💖</p>
+  <div class="title">Us ♾️</div>
+  <img id="finalPhoto" class="drag-photo" style="position:relative;top:60px" src="final1.jpg">
+  <p class="subtitle">It never ends 💖</p>
 </div>
 
 <script>
 /* FLOATING HEARTS */
-setInterval(() => {
-  const h = document.createElement("div");
-  h.className = "heart-float";
-  h.innerHTML = "❤️";
-  h.style.left = Math.random() * 100 + "vw";
-  h.style.fontSize = Math.random() * 20 + 16 + "px";
+setInterval(()=>{
+  const h=document.createElement("div");
+  h.className="heart-float";
+  h.innerHTML="❤️";
+  h.style.left=Math.random()*100+"vw";
+  h.style.fontSize=(16+Math.random()*20)+"px";
   document.body.appendChild(h);
-  setTimeout(() => h.remove(), 8000);
-}, 500);
+  setTimeout(()=>h.remove(),8000);
+},500);
 
 /* HOLD HEART */
-let progress = 0, holding = false;
-document.body.addEventListener("touchstart", () => holding = true);
-document.body.addEventListener("touchend", () => holding = false);
+let progress=0,holding=false;
+document.body.addEventListener("touchstart",()=>holding=true);
+document.body.addEventListener("touchend",()=>holding=false);
 
-setInterval(() => {
-  if (holding && progress < 100) {
+setInterval(()=>{
+  if(holding && progress<100){
     progress++;
-    progressBar();
-    if (progress === 100) showPage(2);
+    document.getElementById("progress").style.width=progress+"%";
+    if(progress===100) showPage(2);
   }
-}, 40);
+},40);
 
-function progressBar(){
-  document.getElementById("progress").style.width = progress + "%";
-}
+/* DRAG PHOTOS */
+const photos=document.querySelectorAll(".drag-photo");
+let moved=new Set();
 
-/* MEMORY PHOTOS */
-let memories = ["photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg"];
-let m = 0;
-memoryPhoto.onclick = () => {
-  m++;
-  if (m < memories.length) {
-    memoryPhoto.src = memories[m];
-  } else {
-    giftBtn.style.display = "inline-block";
-  }
-};
-giftBtn.onclick = () => showPage(3);
+photos.forEach(p=>{
+  let ox=0,oy=0,drag=false;
+  p.addEventListener("touchstart",e=>{
+    drag=true;
+    const t=e.touches[0];
+    const r=p.getBoundingClientRect();
+    ox=t.clientX-r.left;
+    oy=t.clientY-r.top;
+  });
+  p.addEventListener("touchmove",e=>{
+    if(!drag)return;
+    const t=e.touches[0];
+    p.style.left=(t.clientX-ox)+"px";
+    p.style.top=(t.clientY-oy)+"px";
+    p.style.transform="none";
+  });
+  p.addEventListener("touchend",()=>{
+    drag=false;
+    moved.add(p);
+    if(moved.size>=4){
+      document.getElementById("giftBtn").style.display="inline-block";
+    }
+  });
+});
+
+giftBtn.onclick=()=>showPage(3);
 
 /* FINAL LOOP */
-let finals = ["final1.jpg","final2.jpg","final3.jpg"];
-let f = 0;
-finalPhoto.onclick = () => {
-  f = (f + 1) % finals.length;
-  finalPhoto.src = finals[f];
+let finals=["final1.jpg","final2.jpg","final3.jpg"];
+let f=0;
+finalPhoto.onclick=()=>{
+  f=(f+1)%finals.length;
+  finalPhoto.src=finals[f];
 };
 
 /* PAGE SWITCH */
