--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ body{
   font-family:'Poppins',sans-serif;
   background:linear-gradient(-45deg,#ff5f9e,#ff85c1,#ff9acb,#ff6fae);
   background-size:400% 400%;
-  animation:bgMove 12s ease infinite;
+  animation:bg 12s ease infinite;
   overflow:hidden;
   color:white;
 }
 
-@keyframes bgMove{
+@keyframes bg{
   0%{background-position:0% 50%}
   50%{background-position:100% 50%}
   100%{background-position:0% 50%}
@@ -30,7 +30,6 @@ body{
   padding:20px;
   text-align:center;
 }
-
 .page.active{display:block;}
 
 .title{
@@ -38,11 +37,9 @@ body{
   font-size:46px;
   margin-top:20px;
 }
-
 .subtitle{
   font-size:16px;
   opacity:.9;
-  margin-bottom:12px;
 }
 
 /* Floating hearts */
@@ -54,91 +51,83 @@ body{
   animation:float 8s linear infinite;
 }
 @keyframes float{
-  from{transform:translateY(0)}
   to{transform:translateY(-120vh)}
 }
 
-/* Big heart */
+/* Heart loader */
 .big-heart{
   font-size:130px;
-  margin-top:100px;
-  animation:pulse 1.3s infinite;
+  margin-top:80px;
+  animation:pulse 1.2s infinite;
   cursor:pointer;
 }
 @keyframes pulse{
-  0%{transform:scale(1)}
   50%{transform:scale(1.25)}
-  100%{transform:scale(1)}
 }
 
-/* Photos area */
-#photoArea{
+.progress{
+  width:80%;
+  height:14px;
+  margin:30px auto;
+  background:rgba(255,255,255,.3);
+  border-radius:20px;
+  overflow:hidden;
+}
+.progress span{
+  display:block;
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#fff,#ffd700);
+}
+
+/* Images */
+#imageArea{
   height:65vh;
   overflow-y:auto;
-  padding-bottom:20px;
 }
-
-/* Individual photo */
-.photo{
+.imgCard{
   width:90%;
   max-width:320px;
   margin:18px auto;
-  display:block;
-  border-radius:22px;
+  border-radius:20px;
   box-shadow:0 20px 40px rgba(0,0,0,.35);
   cursor:grab;
   position:relative;
   touch-action:none;
 }
-.photo:active{cursor:grabbing}
 
-/* Gift button */
-#giftBtn{
-  margin-top:15px;
-  padding:16px 40px;
-  font-size:20px;
-  border:none;
-  border-radius:50px;
-  background:linear-gradient(90deg,#ffd700,#fff1a8);
-  color:#5a3000;
-  font-weight:bold;
-  box-shadow:0 0 25px rgba(255,215,0,.9);
-  cursor:pointer;
-}
-
-/* Ticket */
-.ticket{
-  margin-top:120px;
-  padding:35px;
-  border-radius:24px;
-  background:linear-gradient(135deg,#ffd700,#fff1a8);
-  color:#5a3000;
-  font-size:28px;
-  font-family:'Great Vibes',cursive;
-}
-
-/* Reveal button */
-.revealBtn{
-  margin-top:30px;
+/* Buttons */
+.btn{
+  margin-top:20px;
   padding:14px 36px;
   font-size:18px;
   border:none;
   border-radius:40px;
   background:#ff5f9e;
   color:white;
+  display:none;
   cursor:pointer;
 }
 
 /* Final slider */
-#finalSlider{
+#slider{
   width:90%;
   max-width:340px;
-  margin:40px auto;
-  border-radius:24px;
+  margin:20px auto;
+  border-radius:22px;
   overflow:hidden;
   box-shadow:0 25px 50px rgba(0,0,0,.4);
 }
-#finalSlider img{width:100%}
+#slider img{width:100%}
+
+.letter{
+  margin-top:20px;
+  padding:20px;
+  font-size:15px;
+  line-height:1.6;
+  background:rgba(255,255,255,.15);
+  border-radius:20px;
+}
 </style>
 </head>
 
@@ -147,37 +136,41 @@ body{
 <!-- PAGE 1 -->
 <div class="page active" id="p1">
   <div class="title">Aaditi ❤️</div>
-  <div class="subtitle">From Avi, with all my heart</div>
-  <div class="big-heart" id="startHeart">❤️</div>
-  <div class="subtitle">Tap the heart</div>
+  <div class="subtitle">Hold my heart</div>
+  <div class="big-heart" id="heart">❤️</div>
+  <div class="progress"><span id="bar"></span></div>
 </div>
 
 <!-- PAGE 2 -->
 <div class="page" id="p2">
-  <div class="title">Our Memories 💕</div>
-  <div class="subtitle">Slide each photo anywhere</div>
-
-  <div id="photoArea"></div>
-
-  <button id="giftBtn">🎁 A Gift For You</button>
+  <div class="title">Our Feelings ✨</div>
+  <div class="subtitle">Slide each memory anywhere</div>
+  <div id="imageArea"></div>
+  <button class="btn" id="loveBtn">I Love You ❤️</button>
 </div>
 
 <!-- PAGE 3 -->
 <div class="page" id="p3">
-  <div class="ticket">A Golden Ticket For Us ✨</div>
-  <button class="revealBtn" onclick="openFinal()">Reveal Surprise</button>
-</div>
+  <div class="title">Forever Us 💖</div>
 
-<!-- PAGE 4 -->
-<div class="page" id="p4">
-  <div class="title">Us. Always. ❤️</div>
-  <div id="finalSlider">
+  <div id="slider">
     <img id="slideImg" src="1.jpg">
+  </div>
+
+  <div class="letter">
+    Aaditi, I don’t love you for one reason, I love you for a thousand little ones.
+    I love the way you smile without trying, the way you understand me even in silence,
+    and the way you make everything feel lighter just by being there.
+    With you, I don’t feel alone, I feel complete.
+    No matter where life takes us, I want you to know that I am always with you —
+    in your happiness, your struggles, your dreams, and your fears.
+    I believe in you, in us, and in everything we are yet to become.
+    This is my promise, today and always.
+    — Avi ❤️
   </div>
 </div>
 
-<!-- Background Music -->
-<audio id="bgMusic" loop>
+<audio id="music" loop>
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
@@ -192,55 +185,76 @@ for(let i=0;i<25;i++){
   document.body.appendChild(h);
 }
 
-/* Start experience */
-document.getElementById("startHeart").onclick = () => {
-  showPage(2);
-  document.getElementById("bgMusic").play();
+/* Heart loader */
+let hold=0, timer;
+const bar=document.getElementById("bar");
+const heart=document.getElementById("heart");
+
+heart.onmousedown=heart.ontouchstart=()=>{
+  timer=setInterval(()=>{
+    hold+=2;
+    bar.style.width=hold+"%";
+    if(hold>=100){
+      clearInterval(timer);
+      showPage(2);
+      document.getElementById("music").play();
+    }
+  },40);
 };
+document.onmouseup=document.ontouchend=()=>clearInterval(timer);
 
-/* Load photos */
-const area = document.getElementById("photoArea");
-for(let i=1;i<=11;i++){
+/* Page 2 images (internet) */
+const urls=[
+ "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e",
+ "https://images.unsplash.com/photo-1517841905240-472988babdf9",
+ "https://images.unsplash.com/photo-1518199266791-5375a83190b7",
+ "https://images.unsplash.com/photo-1492724441997-5dc865305da7",
+ "https://images.unsplash.com/photo-1511988617509-a57c8a288659"
+];
+
+let moved=0;
+const area=document.getElementById("imageArea");
+urls.forEach(u=>{
   let img=document.createElement("img");
-  img.src = i + ".jpg";
-  img.className="photo";
+  img.src=u+"?w=600";
+  img.className="imgCard";
   area.appendChild(img);
-  makeDraggable(img);
-}
+  drag(img);
+});
 
-/* Drag logic */
-function makeDraggable(el){
-  let offsetX=0, offsetY=0, dragging=false;
-
-  el.addEventListener("pointerdown", e=>{
-    dragging=true;
-    offsetX = e.clientX - el.offsetLeft;
-    offsetY = e.clientY - el.offsetTop;
-    el.style.position="absolute";
-    el.style.zIndex=1000;
+function drag(el){
+  let movedOnce=false,ox,oy;
+  el.onpointerdown=e=>{
     el.setPointerCapture(e.pointerId);
-  });
-
-  el.addEventListener("pointermove", e=>{
-    if(!dragging) return;
-    el.style.left = (e.clientX - offsetX) + "px";
-    el.style.top  = (e.clientY - offsetY) + "px";
-  });
-
-  el.addEventListener("pointerup", ()=> dragging=false);
+    ox=e.clientX-el.offsetLeft;
+    oy=e.clientY-el.offsetTop;
+    el.style.position="absolute";
+    if(!movedOnce){
+      movedOnce=true;
+      moved++;
+      if(moved===urls.length)
+        document.getElementById("loveBtn").style.display="inline-block";
+    }
+  };
+  el.onpointermove=e=>{
+    if(e.pressure===0) return;
+    el.style.left=e.clientX-ox+"px";
+    el.style.top=e.clientY-oy+"px";
+  };
 }
 
-/* Gift button */
-document.getElementById("giftBtn").onclick = () => showPage(3);
+/* Love button */
+document.getElementById("loveBtn").onclick=()=>{
+  showPage(3);
+  startSlider();
+};
 
 /* Final slider */
 let idx=1;
-function openFinal(){
-  showPage(4);
+function startSlider(){
   setInterval(()=>{
-    idx++;
-    if(idx>11) idx=1;
-    document.getElementById("slideImg").src = idx + ".jpg";
+    idx++; if(idx>11) idx=1;
+    document.getElementById("slideImg").src=idx+".jpg";
   },2500);
 }
 
@@ -250,5 +264,6 @@ function showPage(n){
   document.getElementById("p"+n).classList.add("active");
 }
 </script>
+
 </body>
 </html>
